--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,30 @@
+# ── Python ────────────────────────────────────────────────────────────────────
 .env
+*.env.*
 __pycache__/
 *.py[cod]
 *$py.class
+*.egg-info/
+dist/
+build/
 .pytest_cache/
+.mypy_cache/
+.ruff_cache/
+venv/
+.venv/
+
+# ── Node / React UI ───────────────────────────────────────────────────────────
+ui/node_modules/
+ui/.next/
+ui/dist/
+ui/build/
+ui/.env
+ui/.env.local
+ui/.env.*.local
+
+# ── OS / Editor ───────────────────────────────────────────────────────────────
 .DS_Store
+Thumbs.db
+.idea/
+.vscode/
+*.swp
